# xiii-simple-voice-bot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  main.rs  panel.rs  state.rs  temp_channels.rs  utils.rs  voice.rs
src/ai/: cooldown.rs  deepseek.rs  history.rs  mod.rs
src/discord/: handler.rs  messages.rs  mod.rs
